prevent search bar from jumping to side at higher resolutions

--- a/src/main/content/_assets/css/guides.scss
+++ b/src/main/content/_assets/css/guides.scss
@@ -150,7 +150,6 @@ $blue-grey-color: #5d6a8e;
         padding: 11px 17px 15px;
     }
     & .popover {
-        position: relative;
         display: inline-block !important;
         width: 100%;
         border: none;
